# libvc4regmap

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  libvc4regmap.pc.in  vc4regmap.c
example/: CMakeLists.txt  dmainfo.c
include/: CMakeLists.txt  vc4regmap.h
include/vc4regmap/: axi_dma0.h  axi_dma1.h  axi_dma15.h  axi_dma2.h  axi_dma3.h  axi_dma4.h  axi_dma5.h  axi_dma6.h  axi_dma_lite10.h  axi_dma_lite11.h  axi_dma_lite12.h  axi_dma_lite13.h  axi_dma_lite14.h  axi_dma_lite7.h  axi_dma_lite8.h  axi_dma_lite9.h  axi_dma_top.h  cpr_clkman.h  cpr_powman.h  i2c_spi_slv.h  v3d.h
src/: CMakeLists.txt  vc4regmap.c
test/: CMakeLists.txt  ident.c  scratch.c
