install(FILES vc4regmap.h DESTINATION include)
install(FILES
    vc4regmap/v3d.h
    vc4regmap/i2c_spi_slv.h
    vc4regmap/cpr_powman.h
    vc4regmap/cpr_clkman.h
    vc4regmap/axi_dma_top.h
    vc4regmap/axi_dma15.h
    vc4regmap/axi_dma1.h
    vc4regmap/axi_dma2.h
    vc4regmap/axi_dma3.h
    vc4regmap/axi_dma4.h
    vc4regmap/axi_dma5.h
    vc4regmap/axi_dma6.h
    vc4regmap/axi_dma_lite7.h
    vc4regmap/axi_dma_lite8.h
    vc4regmap/axi_dma_lite9.h
    vc4regmap/axi_dma_lite10.h
    vc4regmap/axi_dma_lite11.h
    vc4regmap/axi_dma_lite12.h
    vc4regmap/axi_dma_lite13.h
    vc4regmap/axi_dma_lite14.h
    vc4regmap/axi_dma0.h
    DESTINATION include/vc4regmap)
